[project]
name = "revpref"
version = "1.0.0"
authors = [
    {"name" = "Yi Xiang", "email" = "xiangy.i@outlook.com"}
]
description = "Python Tools for Computational Revealed Preference Analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = ["numpy", "networkx", "pulp", "scipy", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/Aliebc/revpref"
"Bug Tracker" = "https://github.com/Aliebc/revpref"

[build-system]
requires = ["setuptools", "numpy", "networkx", "pulp", "scipy", "matplotlib"]
